# labelling_tool

./: .gitignore  LICENSE.md  README.md  requirements.txt  run_labelling.sh  server.py
classification_test/: root.yaml
classification_test/campaignA/: incoming_calls.json  spec.yaml  trig_identities.json
classification_test/campaignB/: spec.yaml  trig_identities.json
label_test/: root.yaml
label_test/campaignA/: spec.yaml  trig_identities.json
label_test/campaignB/: spec.yaml
segment_backend/: Cargo.toml
segment_backend/src/: backend.rs  lib.rs  main.rs  segment.rs  server.rs
segment_backend_py/: backend.py  requirements.txt
segment_backend_rs/: README.md
segment_backend_rs/src/: lib.rs  server.rs
static/: index.html  main.css  main.js
