[package]
name = "segment_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.5.1"
tiny_http = "0.12.0"
serde_json = "1"
ascii = "1.0"
serde = { version = "1.0", features = ["derive"] }

