[package]
name = "segment_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dependencies]

# For the webserver side
tiny_http = "0.12.0"
serde_json = "1"
ascii = "1.0"
serde = { version = "1.0", features = ["derive"] }


# For the segment anything side.
candle-core = "0.5.1"
candle-nn = "0.5.1"
candle-transformers = "0.5.1"
hf-hub  = "0.3.2"
anyhow = "1.0.86"
image = { version = "0.25.0", default-features = false, features = ["jpeg", "png"] }
